ErsteHilfsaussage mit Beweis

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -904,62 +904,38 @@ zurückgegriffen.
 \end{defini}
 
 
-\begin{satz}\label{satz:qrqr}
-  Wenn $\alpha,\beta\in\F_{q}\setminus\{0\}$ quadratische Reste sind,
-  so ist auch $\alpha\beta$ ein quadratischer Rest. Falls $\alpha$ ein
-  quadratischer Rest und $\beta$ ein quadratischer Nichtrest ist, so
-  ist das Produkt ein Nichtrest.
-  \begin{proof}
-    Seien $\alpha,\beta\in\F_{q}\setminus\{0\}$ quadratische
-    Reste. Dann ist nach der Definition $\alpha=\gamma^{2}$ und
-    $\beta=\eta^{2}$ für $\gamma,\eta\in\F_{q}\setminus\{0\}$. Also
-    ist $\alpha\beta=\gamma^{2}\eta^{2}=(\gamma\eta)^{2}$ wieder ein
-    quadratischer Rest.
-
-    Seien $\alpha,\beta\in\F_{q}\setminus\{0\}$ und $\alpha$ ein
-    quadratischer Rest sowie $\beta$ ein Nichtrest. Dann ist
-    $\alpha=\gamma^{2}$ für
-    $\gamma\in\F_{q}\setminus\{0\}$. Angenommen $\alpha\beta$ wäre ein
-    quadratischer Rest, so gälte $\alpha\beta= \eta^{2}$ für ein
-    $\eta\in\F_{q}\setminus\{0\}$. Ein Multiplikation mit
-    $\alpha^{-1}$ ergibt dann, $\beta=\alpha^{-1}\eta^{2}=
-    (\gamma^{-1})^{2}\eta^{2}= (\gamma^{-1}\eta)^{2}$. Also ist
-    $\beta$ ein quadratischer Rest, was im Widerspruch zur Annahme steht.
-  \end{proof}
-\end{satz}
-
-
 \begin{defini}
-  Seien $q$ eine ungerade Primzahlpotenz und $\alpha_{0}=0$,
-  $\alpha_{1},\dots, \alpha_{q-1}$ die Elemente des endlichen
-  Körpers~$\F_{q}$. Die Abbildung $\chi\colon \F_{q}\rightarrow
-  \{0,\pm1\}$ heißt \highl{quadratischer Charakter} und ist definiert durch
+  Sei $p>2$ eine Primzahl. Ist $a\in\Z$, so ist das
+  Legendre-Symbol definiert durch:
   \begin{gather*}
-    \chi(\beta)\coloneqq
+    \legendre{a}{p}\coloneqq
     \begin{cases}
-      0 & \beta=0\\
-      1 & \beta \text{ ist QR in } \F_{q}\\
-      -1 & \beta \text{ ist NR in }\F_{q}\\
+      0 & p\mid a\\
+      1 & a \text{ ist QR }\mod{p}\\
+      -1 & a \text{ ist NR }\mod{p}\\
     \end{cases}
   \end{gather*}
   Dabei bedeutet QR quadratischer Rest und NR Nichtrest.
 \end{defini}
 
-
-Eine wichtige Eigenschaft des quadratischen Charakters ist die
-Multiplikativität. Dies wird später bei der Konstruktion von \HMen{}
-nach den Methoden von \Paley{} benötigt (\autoref{sec:konst-payley})
-und daher soll diese Eigenschaft hier nachgewiesen werden.
+Die Multiplikativität  des Legendre-Symbols wird im späteren Verlauf
+wichtig. Daher soll diese Eigenschaft nachgewiesen werden. Für diese
+Arbeit wurde der Weg über das \textsc{Euler}sche Kriterium
+gewählt. Zur Vorbereitung ist noch eine Hilfsaussage nötig.
 
 \begin{satz}
-  Für $\alpha, \beta\in\F_{q}$ gilt,
-  $\chi(\alpha\beta)=\chi(\alpha)\chi(\beta)$.
+  Sei $p>2$ eine Primzahl und $w$ die primitive Einheitswurzel von
+  $\F_{p}^{\times}$. Dabei bezeichnet $\F_{p}^{\times}$ die
+  multiplikative Gruppe. Dann gilt:
+  \begin{gather*}
+     w^{\frac{p-1}{2}}=1
+  \end{gather*}
   \begin{proof}
-    \begin{enumerate}[1.\,F{a}ll]
-    \item Sei \OE{} $\alpha=0$. Dann ist
-      $\chi(\alpha\beta)=\chi(0\cdot\beta)= \chi(0)=0=\chi(0)\chi(\beta)$.
-    \item Seien nun $\alpha,\beta\neq0$.
-    \end{enumerate}
+    Sei $a= w^{\frac{p-1}{2}}$. Die Ordnung von $w$ ist $p-1$ und es
+    ergibt sich, $a^{2}= (w^{\frac{p-1}{2}})^{2}= w^{p-1}= 1$. Somit
+    ist $a$ Wurzel des Polynoms $x^{2}-1$. Es kann also die Werte $+1$
+    oder $-1$ annehmen. Da aber $a= w^{\frac{p-1}{2}}$ ist und die
+    Ordnung $p-1>\frac{p-1}{2}$ ist, ist $a\neq1$. Damit gilt, $a=-1$.
   \end{proof}
 \end{satz}
 
