--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -904,7 +904,7 @@ zurückgegriffen.
 \end{defini}
 
 
-\begin{defini}
+\begin{defini}\label{def:legendre}
   Sei $p>2$ eine Primzahl. Ist $a\in\Z$, so ist das
   Legendre-Symbol definiert durch:
   \begin{gather*}
@@ -923,7 +923,7 @@ wichtig. Daher soll diese Eigenschaft nachgewiesen werden. Für diese
 Arbeit wurde der Weg über das \textsc{Euler}sche Kriterium
 gewählt. Zur Vorbereitung ist noch eine Hilfsaussage nötig.
 
-\begin{satz}
+\begin{satz}\label{satz:hilfeuler}
   Sei $p>2$ eine Primzahl und $w$ die primitive Einheitswurzel von
   $\F_{p}^{\times}$. Dabei bezeichnet $\F_{p}^{\times}$ die
   multiplikative Gruppe. Dann gilt:
@@ -939,46 +939,39 @@ gewählt. Zur Vorbereitung ist noch eine Hilfsaussage nötig.
   \end{proof}
 \end{satz}
 
-\begin{satz}[\textsc{Euler}sches Kriterium]
-  Sei $p>2$ eine Primzahl. Dann gilt:
-  \begin{gather}
-    \label{eq:euler-krit}
-    \legendre{a}{p}\equiv a^{\frac{p-1}{2}}\mod{p},\qquad a\in\Z
-  \end{gather}
+\begin{satz}[\textsc{Euler}sches Kriterium]\label{satz:eulerkrit}
+  Sei $p>2$ eine Primzahl. Wenn $a\in\F_{p}^{\times}$, dann ist
+  $a^{\frac{p-1}{2}}$ entweder $+1$ oder $-1$. Weiterhin ist $a$ genau
+  dann ein quadratischer Rest, wenn gilt, $a^{\frac{p-1}{2}}=1$.
   \begin{proof}
-    \begin{enumerate}[1.\,F{a}ll]
-    \item Für $p\mid a$ ist $\legendre{a}{p}=0$ und
-      $a^{\frac{p-1}{2}}\equiv0\mod{p}$. Daher gelte im folgenden
-      immer $p\nmid a$.
-    \item Sei $a$ ein quadratischer Rest modulo $p$. Nach der
-      \autoref{def:quadr-rest} gibt es dann ein $b\in\Z$ mit
-      $a\equiv b^{2}\mod{p}$. Also ist
-      $a^{\frac{p-1}{2}}\equiv(b^{2})^{\frac{p-1}{2}}\equiv
-      b^{p-1}\mod{p}$. Nach dem kleinen fermatschen Satz ergibt sich
-      dann: $b^{p-1}\equiv1\mod{p}=\legendre{a}{p}$.\todo{Ggf. $\mod$ verschieben.}
-    \item Sei $a$ ein quadratischer Nichtrest modulo $p$. In dem Fall
-      hat die Kongruenz $b^{2}\equiv a\mod{p}$ für $b\in\Z$ keine
-      Lösung.\\
-      Sei nun $z$ eine Primitivwurzel modulo $p$. Dann gilt $a=z^{m}$
-      für $m=2k+1$ und $m,k\in\N$. Es ist $a^{\frac{p-1}{2}}=
-      (z^{m})^{\frac{p-1}{2}}= (z^{2k+1})^{\frac{p-1}{2}}=
-      z^{\frac{2kp-2k+p-1}{2}}= z^{\frac{2k(p-1)}{2}+\frac{p-1}{2}}=
-      z^{k(p-1)+\frac{p-1}{2}}= z^{k(p-1)}z^{\frac{p-1}{2}}$. Es ist
-      $z^{k(p-1)}\equiv1\mod{p}$ und
-      $z^{\frac{p-1}{2}}\equiv-1\mod{p}= \legendre{a}{p}$. Insgesamt
-      ergibt sich damit die Behauptung.
-    \end{enumerate}
+    Sei $w$ eine primitive Einheitswurzel in $\F_{p}^{\times}$. Dann
+    ist $a=w^{k}$ für ein $k\in\Z$. Die Anwendung von
+    \autoref{satz:hilfeuler} ergibt, $a^{\frac{p-1}{2}}=
+    (w^{k})^{\frac{p-1}{2}}= (w^{\frac{p-1}{2}})^{k}= (-1)^{k}$. Wenn
+    $k$ eine gerade Zahl, also $k=2l$ für ein $l\in\N$, ist, ist
+    $a=w^{k}=(w^{l})^{2}$ ein quadratischer Rest und $(-1)^{k}=1$. Für
+    $k$ ungerade, ist $a$ ein Nichtrest und das Ergebnis von
+    $(-1)^{k}$ ist $-1$.
   \end{proof}
 \end{satz}
 
-Damit ist klar, dass aus der Multiplikation zweier quadratischer Reste
-oder zweier quadratischer Nichtreste ein quadratischer Rest
-hervorgeht. Die Multiplikation eines quadratischen Rests mit einem
-quadratischen Nichtrest führt wieder zu einem quadratischen
-Nichtrest. Insgesamt gilt für eine Primzahl~$p>2$:
-\begin{gather*}
-  \legendre{a}{p}\legendre{b}{p}= \legendre{ab}{p}\qquad a,b\in\Z
-\end{gather*}
+\begin{satz}
+  Sei $p>2$ eine Primzahl und $a\in\N$. Dann gilt,
+  \begin{gather*}
+    \legendre{a}{p}\equiv a^{\frac{p-1}{2}}\mod{p}
+  \end{gather*}
+  \begin{proof}
+    \begin{enumerate}[1.\,F{a}ll]
+    \item Sei $\legendre{a}{p}=0$. Dann ist $p\mid a$ nach
+      \autoref{def:legendre}. Also ist $a\equiv0\mod{p}$ und
+      $a^{\frac{p-1}{2}}\equiv0\mod{p}$.
+    \item Sei $\legendre{a}{p}=1$. Dann ist $a$ ein quadratischer Rest
+      und nach \autoref{satz:eulerkrit} gilt, $a^{\frac{p-1}{2}}=1$.
+    \item Sei $\legendre{a}{p}=-1$. Dann ist $a$ ein Nichtrest und
+      nach \autoref{satz:eulerkrit} gilt, $a^{\frac{p-1}{2}}=-1$.
+    \end{enumerate}
+  \end{proof}
+\end{satz}
 
 \subsection{Permanente}
 \label{sec:permanente}
