Abschlussatz zur Einleitung

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -119,6 +119,7 @@
   \<Mahato & Hrishikesh & Mahato & >
   \<Turyn & Richard J. & Turyn & >
   \<London & Stephen & London & >
+  \<Leopardi & Paul C. & Leopardi & >
 \end{nameauth}
 
 \newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
@@ -444,15 +445,29 @@ Erfolg gekrönt. Daher stellte er die Behauptung auf, dass es keine
 $140\times140$ \HM{} nach dem Konstruktionsverfahren von \Williamson{}
 gibt. Weiterhin sind die Grade $188$, $212$ und $236$
 offen~\cite{zbMATH05536712} und es ist unklar, ob der Ansatz von
-\Williamson{} \HMen{} beliebigen Grades erzeugen kann.
+\Williamson{} \HMen{} beliebigen Grades jenseits der bereits bekannten
+Ausnahmen erzeugen kann.
 
-\todo[inline]{Mehr zur Geschichte}
+Dadurch das gerade der bislang offene Grad mit Hilfe des Verfahrens
+von \Williamson{} erzeugt werden konnte, zog diese Methode das
+Interesse der Forscher auf sich. \Goethals{} und \Seidel{}
+veröffentlichten 1967 eine Methode, die nur mit zirkulanten Matrizen
+arbeitet. Der Ansatz eignet sich für rechnergestützte
+Suche. \Dokovic{} veröffentlichte in den letzten Jahren immer wieder
+Ergebnisse, die auf dem \Goethals -\Seidel -Verfahren beruhen. Zum
+Zeitpunkt der Niederschrift dieser Arbeit erschien eine
+Veröffentlichung~\cite{zbMATH06307039}, die \HMen{} vom Grad~$1004$
+und $2524$ sowie schiefe \HMen{} konstruiert. Damit wurde die Zahl der
+\HMen{} bis zum Grad~$2000$ deren Existenz unklar ist, auf 12
+reduziert.
 
-\section{Anwendungen von \HMen}
-\label{sec:anwendung}
-
-\todo[inline]{Mehr zu Anwendungen}
-
+Seit Beginn der 1990er Jahre werden \HMen{} verstärkt mit Mitteln aus
+der Kohomologie"=Theorie untersucht. Schließlich veröffentliche
+\Leopardi{} 2014 einen Artikel~\cite{leopardicliff}, in dem \HMen{} mittels
+Clifford"=Algebren konstruiert werden. Beide Ansätze nutzen abstrakte
+und tiefgehende mathematische Verfahren. Daher ist zu erwarten, dass
+die Theorie um \HMen{} auch künftig reichhaltige und interessante
+Ergebnisse liefert.
 
 \section{\HMen{}}
 \label{sec:einleitung}
