Abschnitt zu Paley vollendet

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -1227,7 +1227,8 @@ Konstruktion für Matrizen des Grads~$2^{k}$ für
 $k\in\N$.
 
 Die Konstruktionsverfahren nach \Paley{} sind direkte
-Konstruktionen.\todo{ein wenig mehr zu Paley}
+Konstruktionen. Das heißt, die \HMen{} aufgrund von Rechenoperationen
+und ohne Zuhilfenahme anderer Matrizen gewonnen.
 
 \Williamson{} verwendete verschiedene Matrizen und \enquote{steckte}
 diese zu \HMen{} zusammen. Daher spricht man von
