--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -1209,12 +1209,15 @@ wurden die Verfahren weiter verfeinert. Allerdings verbleiben auch in
 diesen Verfahren offene Fälle. Die Ordnung~$668$ ist die derzeit
 kleinste Zahl für die keine \HM{} gefunden werden konnte.
 
-Im folgenden soll ein Überblick über existierende Verfahren gegeben
-werden. Dabei werden Verfahren in deren historischem Erscheinen
-angegeben. Das Ende des Kapitels versucht eine Kategorisierung der
-Verfahren einzuführen. Diese richtet sich nach einem Vorschlag von
-\Seberry{} und \Yamada{}. Diese schlugen vor, folgende Einteilung
-vorzunehmen~\cite{zbMATH00124523}
+Im folgenden soll ein Überblick über einige der existierenden
+Verfahren gegeben werden. Aufgrund des Umfangs der Forschung zu
+Konstruktionsverfahren erhebt dieses Kapitel keinen Anspruch auf
+vollständig. Vielmehr war es das Ziel einige wichtige Verfahren zu
+beschreiben.
+
+Die bisher bekannten Konstruktionen lassen sich in eine von drei
+Klassen einteilen. Diese Einteilung richtet sich nach einem Vorschlag
+von \LSeberry{} und \Yamada{}~\cite{zbMATH00124523}:
 \begin{itemize}
 \item Multiplikationstheoreme (Multiplication theorems)
 \item Direkte Konstruktionen (Direct constructions)
