GS neu definiert

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -2312,30 +2312,51 @@ Die Matrizen $A_{i}$ werden in der Literatur manchmal als
 
 \section{Konstruktion nach Goethals-Seidel}
 
-Die Arbeit von \Williamson{} erwies sich als sehr reichhaltig. Es
-existieren einige Konstruktionsverfahren, die diese Methoden nutzen
-oder sogar ausbauen. \Goethals{} und \Seidel{} konnten zeigen, dass
-die ursprünglich von \Williamson{} gewählten Bedingungen zu restriktiv
-sind und verallgemeinerten seine Ergebnisse~\cite{zbMATH03249824}.
+Von \Goethals{} und \Seidel{} stammt ein
+Verfahren~\cite{zbMATH03249824}, welches auf den Ideen von
+\Williamson{} aufbaut. Dieses Verfahren verzichtet auf symmetrische
+Matrizen und ist somit weniger restriktiv als der Ansatz von
+\Williamson{}. In der Vergangenheit zeigte sich, dass das Verfahren
+von \Goethals-\Seidel{} gut für die Suche nach \HMen{} mit der Hilfe
+von Computern geeignet ist. Insbesondere \Dokovic{} veröffentlichte
+einige neue \HMen{}, die durch das Verfahren errechnet wurden.
 
+\begin{defini}
+  Sei $q\in\N$. Dann heißen die zirkulanten $q\times q$ Matrizen
+  $T_{i}$ für $i=1,2,3,4$ $T$"=Matrizen, wenn diese Einträge aus
+  $\{0,\pm1\}$ besitzen und es gilt, $\sum_{i=1}^{4} T_{i}T_{i}^{T}=
+  qI_{q}$.
+\end{defini}
 
-\begin{defini}[Konstruktionsverfahren nach \Goethals-\Seidel{}]
-  Seien $n\in\N$ sowie $A$, $B$, $C$ und $D$ zirkulante $n\times n$
-  Matrizen mit der Eigenschaft $AA^{T}+BB^{T}+CC^{T}+DD^{T}=
-  4nI_{n}$. Weiterhin sei $R$ eine $n\times n$ Matrix, die
-  Eins"=Einträge auf der Nebendiagonale besitzt, also $r_{i,j}=1$ für
-  $i+j=n+1$ und sonst $0$ für $i,j=1,\dots,n$. Dann ist die Matrix~$H$
-  eine \HM{}:
+\begin{satz}[Konstruktionsverfahren nach \Goethals-\Seidel{}]
+  Sei $q,r\in\N$. Weiterhin seien $T_{i}$ für $i=1,2,3,4$ $T$-Matrizen
+  und $W_{i}$ vier $r\times r$ \Williamson-Matrizen aus
+  \autoref{satz:konstr-nach-will}. Schließlich sei $S$ eine $q\times
+  q$ Matrix, die aus Eins"=Einträgen auf der Nebendiagonalen, also
+  $s_{ij}=1$ für $i+j=q+1$, und sonst $0$ besteht. Daraus werden die
+  folgenden Matrizen konstruiert:
+  \begin{align*}
+    R &= S\otimes I_{r}\\
+    A_{1} &= T_{1}\otimes W_{1}+ T_{2}\otimes W_{2}+ T_{3}\otimes
+    W_{3}+ T_{4}\otimes W_{4}\\
+    A_{2} &= -T_{1}\otimes W_{1}+ T_{2}\otimes W_{2}+ T_{3}\otimes
+    W_{3}- T_{4}\otimes W_{4}\\
+    A_{3} &= -T_{1}\otimes W_{1}- T_{2}\otimes W_{2}+ T_{3}\otimes
+    W_{3}+ T_{4}\otimes W_{4}\\
+    A_{4} &= -T_{1}\otimes W_{1}+ T_{2}\otimes W_{2}- T_{3}\otimes
+    W_{3}+ T_{4}\otimes W_{4}\\
+  \end{align*}
+  Dann ist die folgende Matrix eine \HM{}.
   \begin{gather*}
-    H=
+    H_{4qr}=
     \begin{pmatrix*}[r]
-      A & BR & CR & DR\\
-      -BR & A & D^{T}R & B^{T}R\\
-      -CR & -D^{T}R & A & B^{T}R\\
-      -DR & D^{T}R & -B^{T}R & A
+       A_1  & A_2R      & A_3R      & A_4R\\
+      -A_2R & A_1       & A_4^{T}R  & -A_3^{T}R\\
+      -A_3R & -A_4^{T}R & A_1       & A_2^{T}R\\
+      -A_4R & A_3^{T}R  & -A_2^{T}R & A_1
     \end{pmatrix*}
   \end{gather*}
-\end{defini}
+\end{satz}
 
 
 \section{Konstruktionsverfahren mit Folgen vom Turyn-Typ}
