Schlusssatz zu GS

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -2323,7 +2323,7 @@ einige neue \HMen{}, die durch das Verfahren errechnet wurden.
 
 \begin{satz}[Konstruktionsverfahren nach \Goethals-\Seidel{}]
   Sei $n\in\N$ und $A$, $B$, $C$, $D$ vier zirkulante $n\times n$
-  Matrizen mit $AA^{T}+ BB^{T}+ CC^{T}+ DD^{T}= nI_{n}$. Außerdem
+  Matrizen mit $AA^{T}+ BB^{T}+ CC^{T}+ DD^{T}= 4nI_{n}$. Außerdem
   sei $R$ eine $n\times n$ Matrix, die aus Eins"=Einträgen auf der
   Nebendiagonalen, also $r_{ij}=1$ für $i+j=n+1$, und sonst $0$
   besteht.  Dann ist die folgende Matrix eine \HM{}.
@@ -2353,8 +2353,8 @@ einige neue \HMen{}, die durch das Verfahren errechnet wurden.
     \end{pmatrix}
     \end{gather*}
     zu berechnen. Dabei wurde berücksichtigt, dass $RR^{T}=RR$
-    ist. Die Diagonaleinträge haben die Form $AA^{T}\pm BRRB^{T}\pm
-    CRRC^{T}\pm DRRD^{T}$, wobei die Summanden gegebenenfalls in
+    ist. Die Diagonaleinträge haben die Form $AA^{T}+ BRRB^{T}+
+    CRRC^{T}+ DRRD^{T}$, wobei die Summanden gegebenenfalls in
     unterschiedlicher Reihenfolge vorkommen. Da $RR=I$ kann die
     Voraussetzung angewendet werden.
 
@@ -2379,6 +2379,11 @@ einige neue \HMen{}, die durch das Verfahren errechnet wurden.
   sind damit die alle Elemente außerhalb der Hauptdiagonalen $0$ und
   die Behauptung ist gezeigt.
 \end{satz}
+
+Die Schwierigkeit bei dem Verfahren besteht in der Suche nach
+geeigneten zirkulanten Matrizen, die der Bedingung $AA^{T}+ BB^{T}+
+CC^{T}+ DD^{T}= 4nI_{n}$ genügen. Im folgenden soll ein Ansatz
+vorgestellt werden, der Folgen vom Turyn"=Typ verwendet.
 
 
 \section{Konstruktionsverfahren mit Folgen vom Turyn-Typ}
