--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -290,10 +290,8 @@
   Verfahren wurde zusammen mit Erkenntnissen von \Turyn{} in jüngerer
   Zeit immer wieder benutzt, um neue \HMen{} zu finden.
 
-  Ziel dieser Arbeit ist es, anhand diese Verfahren vorzustellen und
-  einige Beispiele für deren Anwendung zu liefern. Abschließend wird
-  ein Ausblick auf andere Verfahren gegeben, die Ansätze aus anderen
-  Teilgebieten der Mathematik verwenden.
+  Ziel dieser Arbeit ist es, diese Verfahren vorzustellen und
+  einige Beispiele für deren Anwendung zu liefern.
 \end{abstract}
 
 \tableofcontents
@@ -2694,9 +2692,9 @@ berechenbar sind.
   Zum Nachweis ist $(N_{X}+N_{Y}+2N_{Z}+2N_{W})(k)$ für $k\geq1$ zu
   berechnen:
   \begin{align*}
-    k=1 & (1-1+2-2)+(1-1-2-2)+(1+1+2)= 0-4+4=0\\
-    k=2 & (1+1-2+2)+(+1-1-2)=0+0=0\\
-    k=3 & (1+1-2)=0
+    k=1 &\colon (1-1+2-2)+(1-1-2-2)+(1+1+2)= 0-4+4=0\\
+    k=2 &\colon (1+1-2+2)+(+1-1-2)=0+0=0\\
+    k=3 &\colon (1+1-2)=0
   \end{align*}
   Weiterhin haben $X$, $Y$ und $Z$ die Länge $4$ und $W$ hat die Länge
   $3$. Damit sind alle Eigenschaften für die Folgen vom Turyn"=Typ
