--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -332,7 +332,7 @@ geliefert. Das Kapitel startet mit dem Verfahren von \Sylvester{} in
 Basis seines Verfahrens. \Scarpis{} stellte 1898 das Verfahren aus
 \autoref{sec:scarpis} vor. Dieses Verfahren ist heute in der Literatur
 kaum noch zu finden und soll daher hier dokumentiert werden. Der Autor
-der vorliegenden Arbeit benutzte heirfür eine Beschreibung im Weblog
+der vorliegenden Arbeit benutzte hierfür eine Beschreibung im Weblog
 des Mathematikers \Orrick{}. Die beiden Konstruktionsverfahren von
 \Paley{} sind in \autoref{sec:konst-payley}. Dem schließt sich das
 Verfahren von \Williamson{} an. Dieser Forscher benutzte verschiedene
@@ -773,7 +773,7 @@ lassen sich andere \HMen{} erzeugen.
   \end{pmatrix*}
 \end{gather*}
 Durch die Betrachtung von \HMen{}, die durch die oben genannten
-Umformungen enstanden sind, sind keine wesentlich neuen Erkenntnisse
+Umformungen entstanden sind, sind keine wesentlich neuen Erkenntnisse
 zu erwarten. Andererseits sind in \autoref{fig:had20} drei
 \HMen{} vom Grad~$20$ aufgeführt, die nicht durch
 Umformungen entstanden sind. In den drei Fällen gibt es keine
@@ -849,7 +849,7 @@ von Wichtigkeit sind.
   Sei $R$ ein Ring, $A=(a_{ij})$ eine $m\times m$ Matrix und $B=(b_{kl})$ eine $n\times
   n$ Matrix mit $a_{ij}, b_{kl}\in R$ für $i,j=1,\dots,m$ und
   $k,l=1,\dots,n$. Das \highl{Tensorprodukt} $A\otimes B$ in
-  \autoref{eq:kron-prod} wird als \highl{Kronecker-Podukt} bezeichnet.
+  \autoref{eq:kron-prod} wird als \highl{Kronecker-Produkt} bezeichnet.
   \begin{gather}
     \label{eq:kron-prod}
     A\otimes B=
@@ -1151,7 +1151,7 @@ Matrizen nicht äquivalent. Die Matrix~$A$ ist noch nicht einmal eine \HM{}.
 \subsection{Zirkulante Matrix}
 \label{sec:circulant}
 
-Zirkulante Matrixen werden benutzt, um \HMen{} zu konstruieren. Daher
+Zirkulante Matrizen werden benutzt, um \HMen{} zu konstruieren. Daher
 soll der Begriff hier mit eingeführt werden.
 \begin{defini}[Zirkulante Matrix]
   Sei $n\in\N$. Eine $n\times n$ Matrix~$C=(c_{ij})_{0\leq i,j\leq n-1}$ heißt
