--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -56,7 +56,7 @@
 \usepackage[final,babel]{microtype} % Verbesserung der Typographie
 \usepackage{mathtools}   % Zur Definition von \abs und \norm
 \usepackage{enumerate}
-%\usepackage{todonotes}   % definiert den Befehl \todo{} um sich leicht
+\usepackage{todonotes}   % definiert den Befehl \todo{} um sich leicht
                          % Markierungen für offene Aufgaben zu setzen; wird
                          % auch für \help (s.u.) verwendet
 
@@ -421,7 +421,7 @@ nicht vorlag. Auch heute ist nur ein Abstract von \Gilman s Werk zu
 finden und es ist zu vermuten, dass die Veröffentlichung abgebrochen
 wurde. Denn \Paley{} entwickelte zur selben Zeit einen allgemeineren
 Ansatz. Er schrieb, wenn $n$ ein Vielfaches von $4$ ist, sodass $n-1$
-oder $(\sfrac{n}{2})-1$ eine Primzahlpotenz ist, dann gibt es eine
+oder $(\sfrac{n}{2})-1$ eine Primzahlpotenz ist\todo{Umformulieren}, dann gibt es eine
 \HM{} vom Grad~$n$. Damit war es auf vielfältige Arten möglich,
 \HMen{} zu erzeugen. Zusammen und in Kombination mit den oben
 vorgestellten Varianten lassen sich damit fast alle \HMen{} bis zum
