--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -511,7 +511,7 @@ Spalten~$i$ und $j$ für $i\neq j$ entspricht nach der
 \autoref{def:hadamard-matrizen} der Multiplikation von Spalte~$i$ und
 Zeile~$j$. Das ergibt aber $0$.
 
-Weiterhin ist die transponierte \HM{} wiederum eine \HM{}. Wenn die
+Weiterhin ist die Transponierte einer \HM{} wiederum eine \HM{}. Wenn die
 \autoref{eq:hm-eigensch} durch $n$ dividiert wird, ergibt sich
 $\sfrac{H}{\sqrt{n}}\cdot\sfrac{H^{T}}{\sqrt{n}}= I_{n}$. Aus der
 linearen Algebra ist bekannt, dass eine lineare Abbildung auf einem
