--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -573,7 +573,7 @@ Fall $n=668$ unklar, ob hierfür eine \HM{} existiert. Bis zum Jahr
 
 Eine weitere Annäherung an die \Hadamard sche Vermutung erfolgte über
 asymptotische Abschätzungen. So gelang \Seberry{} der Nachweis, dass
-es für jede ungerade Zahl $q\in\N$ eine Untergrenze
+es für jede ungerade Zahl $q\in\N$ eine Untergrenze\todo{umformulieren}
 $t_{0}\in\N$ existiert, so dass es eine \HM{} des Grades~$2^{t}q$ mit
 $t\geq t_{0}$ gibt~\cite{Wallis1976188}. Für den Beweis nutzte
 \Seberry{} die so genannten Plugin"=Methoden, die auch beim
@@ -583,7 +583,7 @@ Mittel aus der Designtheorie. Der Beweis kann im Rahmen dieser Arbeit
 nicht angeführt werden und daher sei der Leser an die oben genannte
 Veröffentlichung verwiesen.
 
-Wenn der Nachweis für $t_{0}=2$ gelänge, ist die \Hadamard"=Vermutung
+Wenn der Nachweis für $t_{0}=2$ gelänge, wäre die \Hadamard"=Vermutung
 gezeigt. Denn dann sagt die obige Aussage, dass es \HMen{} vom Grad
 $2^{t}q$ für $t\geq2$ und beliebige natürliche Zahlen $q$
 gibt. Verschiedene Forscher versuchten, sich an $t_{0}$ von oben
@@ -639,7 +639,7 @@ zukünftig weitere Verbesserungen dieser Schranke zu erwarten sind.
   \end{figure}
 \end{bsp}
 
-\section{Weitere Arten von \HMen}
+\section{Varianten von \HMen}
 \label{sec:hm-typen}
 
 Die ersten Arbeiten zu den Matrizen, die später als \HMen{} bekannt
