Kronecker-Produkt allgemeiner formuliert

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -844,18 +844,19 @@ von Wichtigkeit sind.
 \label{sec:kronecker-produkt}
 
 \begin{defini}
-  Sei $R$ ein Ring, $A=(a_{ij})$ eine $m\times m$-Matrix und $B=(b_{kl})$ eine $n\times
-  n$-Matrix mit $a_{ij}, b_{kl}\in R$ für $i,j=1,\dots,m$ und
-  $k,l=1,\dots,n$. Das \highl{Tensorprodukt} $A\otimes B$ in
-  \autoref{eq:kron-prod} wird als \highl{Kronecker-Produkt} bezeichnet.
+  Sei $R$ ein Ring, $A=(a_{ij})$ eine $m\times n$-Matrix und
+  $B=(b_{kl})$ eine $r\times s$-Matrix mit $a_{ij}, b_{kl}\in R$ für
+  $i=1,\dots,m$, $j=1,\dots,n$, $k=1,\dots,r$ und $l=1,\dots,s$. Das
+  \highl{Tensorprodukt} $A\otimes B$ in \autoref{eq:kron-prod} wird
+  als \highl{Kronecker-Produkt} bezeichnet.
   \begin{gather}
     \label{eq:kron-prod}
     A\otimes B=
     \begin{pmatrix}
-      a_{11}B & a_{12}B & a_{13}B & \dots& a_{1m}B\\
-      a_{21}B & a_{22}B & a_{23}B & \dots& a_{2m}B\\
-      \hdots& \hdots&\ddots& \hdots& \hdots\\
-      a_{m1}B & a_{m2}B & a_{m3}B & \dots& a_{mm}B
+      a_{11}B & a_{12}B & a_{13}B & \dots& a_{1n}B\\
+      a_{21}B & a_{22}B & a_{23}B & \dots& a_{2n}B\\
+      \vdots& \vdots & \vdots& & \vdots\\
+      a_{m1}B & a_{m2}B & a_{m3}B & \dots& a_{mn}B
     \end{pmatrix}
   \end{gather}
 \end{defini}
@@ -863,10 +864,7 @@ von Wichtigkeit sind.
 Das Kronecker"=Produkt stellt die Grundlage für viele
 Konstruktionsverfahren von \HMen{} dar. Daher sind die
 Koeffizienten von $A$ und $B$ in den folgenden Betrachtungen meist aus
-$\Z$ bzw. aus der Menge $\{0, \pm1\}$. Weiterhin kann das
-Kronecker"=Produkt allgemeiner für $m\times n$- und $p\times q$-Matrizen definiert werden. Da im Rahmen der Arbeit in der Regel nur
-quadratische Matrizen betrachtet werden, wurde diese Einschränkung
-vorgenommen.
+$\Z$ bzw. aus der Menge $\{0, \pm1\}$. 
 
 Folgende Eigenschaften gelten für das
 Kronecker"=Produkt:
