--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -1205,7 +1205,7 @@ kleinste Zahl für die keine \HM{} gefunden werden konnte.
 Im folgenden soll ein Überblick über einige der existierenden
 Verfahren gegeben werden. Aufgrund des Umfangs der Forschung zu
 Konstruktionsverfahren erhebt dieses Kapitel keinen Anspruch auf
-vollständig. Vielmehr war es das Ziel einige wichtige Verfahren zu
+Vollständigkeit. Vielmehr war es das Ziel einige wichtige Verfahren zu
 beschreiben.
 
 Die bisher bekannten Konstruktionen lassen sich in eine von drei
@@ -1223,8 +1223,8 @@ Konstruktion für Matrizen des Grads~$2^{k}$ für
 $k\in\N$.
 
 Die Konstruktionsverfahren nach \Paley{} sind direkte
-Konstruktionen. Das heißt, die \HMen{} aufgrund von Rechenoperationen
-und ohne Zuhilfenahme anderer Matrizen gewonnen.
+Konstruktionen. Das heißt, die \HMen{} wurden aufgrund von
+Rechenoperationen und ohne Zuhilfenahme anderer Matrizen gewonnen.
 
 \Williamson{} verwendete verschiedene Matrizen und \enquote{steckte}
 diese zu \HMen{} zusammen. Daher spricht man von
@@ -1317,7 +1317,9 @@ Zweierpotenz im Ergebnis abzuschwächen. Ein Ansatz stammt von
 $H_{2}$ vom Grad $4k$ und $4l$ für $k,l\in\N$ aus und konstruieren
 daraus eine \HM{} vom Grad~$8kl$.\footnote{Der Index an beiden \HMen{}
 soll dabei der Unterscheidung der Matrizen und \emph{nicht} zur
-Markierung des Grades dienen.} Dazu werden beide Matrizen zerlegt:
+Markierung des Grades dienen.} Dazu werden beide Matrizen in $2k\times
+2k$-Matrizen~$A$, $B$, $C$, $D$ bzw. $2l\times 2l$-Matrizen~$E$, $F$,
+$G$, $H$ zerlegt:
 \begin{align*}
   H_{1} &=
   \begin{pmatrix}
@@ -1332,8 +1334,8 @@ Markierung des Grades dienen.} Dazu werden beide Matrizen zerlegt:
 \end{align*}
 Da beide \HMen{} sind, gilt, $H_{1}H_{1}^{T}= 4kI_{4k}$ und
 $H_{2}H_{2}^{T}= 4lI_{4l}$. Wie in \autoref{eq:saruk-t1} und \autoref{eq:saruk-t2} zu sehen ist,
-errechnen sich die Diagonaleinträge durch $AA^{T}+BB^{T}= CC^{T}+DD^{T}= 2kI_{2k}$ und
-$EE^{T}+FF^{T}= GG^{T}+HH^{T}= 2lI_{2l}$. Die Ergebnisse außerhalb der
+errechnen sich die Diagonaleinträge durch $AA^{T}+BB^{T}= CC^{T}+DD^{T}= 4kI_{2k}$ und
+$EE^{T}+FF^{T}= GG^{T}+HH^{T}= 4lI_{2l}$. Die Ergebnisse außerhalb der
 Hauptdiagonalen sind $AC^{T}+BD^{T}= CA^{T}+DB^{T}=0$ und
 $EG^{T}+FH^{T}= GE^{T}+HF^{T}=0$.
 \begin{align}\label{eq:saruk-t1}
@@ -1346,7 +1348,7 @@ $EG^{T}+FH^{T}= GE^{T}+HF^{T}=0$.
     B^{T} & D^{T}
   \end{pmatrix}=
   \begin{pmatrix}
-    AA^{T}+BB^{T} & AC^{T}+BC^{T}\\
+    AA^{T}+BB^{T} & AC^{T}+BD^{T}\\
     CA^{T}+DB^{T} & CC^{T}+DD^{T}
   \end{pmatrix}
 \end{align}
@@ -1375,7 +1377,7 @@ ergibt sich dann die \HM{} vom Grad $8kl$ wie folgt:
     \strut\smash{\overbrace{\sfrac{1}{2} (A+B)\otimes E + \sfrac{1}{2} (A-B)\otimes G}^{\mathclap{K}}} &
     \strut\smash{\overbrace{\sfrac{1}{2} (A+B)\otimes F + \sfrac{1}{2} (A-B)\otimes H}^{L}}\\
     \strut\smash{\underbrace{\sfrac{1}{2} (C+D)\otimes E + \sfrac{1}{2} (C-D)\otimes G}_{M}} &
-    \strut\smash{\underbrace{\sfrac{1}{2} (C+D)\otimes F + \sfrac{1}{2} (C-D)\otimes H}_{M}}
+    \strut\smash{\underbrace{\sfrac{1}{2} (C+D)\otimes F + \sfrac{1}{2} (C-D)\otimes H}_{N}}
   \end{pmatrix}
 \end{gather}
 In der \autoref{eq:saruk} wurden die resultierenden Teilmatrizen mit
