Scarpis-Beispiel korrigiert

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -1786,17 +1786,22 @@ von $1$ durch $+$ und von $-1$ durch $-$.
       + & - & - & +
     \end{pmatrix}
   \end{align*}
-  Die Zeilenvektoren für die Berechnung der Matrizen~$M_r$ sind damit $c_{0}=
-  \begin{pmatrix}
-    - & + & -
-  \end{pmatrix}$, $c_{1}=
-  \begin{pmatrix}
-    + & - & -
-  \end{pmatrix}$ sowie $c_{2}=
+  Damit sind die Zeilenvektoren für die Berechnung der Matrizen~$M_r$
+  \begin{itemize}
+  \item $c_{0}=
+    \begin{pmatrix}
+      - & + & -
+    \end{pmatrix}$
+  \item $c_{1}=
+    \begin{pmatrix}
+      + & - & -
+    \end{pmatrix}$
+  \item $c_{2}=
   \begin{pmatrix}
     - & - & +
-  \end{pmatrix}$ und die Matrizen~$M$ sowie $M_{r}$ errechnen sich wie
-  folgt:
+  \end{pmatrix}$.
+  \end{itemize}
+  Die Matrizen~$M$ sowie $M_{r}$ errechnen sich wie folgt:
   \begin{align*}
     M &= H_{2.}\otimes 1_{p}^{T}=
     \begin{pmatrix}
@@ -1824,9 +1829,9 @@ von $1$ durch $+$ und von $-1$ durch $-$.
       c_{1} & -c_{2} & c_{0} & -c_{1}
     \end{pmatrix}=
     \begin{pmatrix}
-      + & - & - & + & - & + & + & - & - & + & + & -\\
-      + & - & - & - & + & + & - & - & + & - & + & +\\
-      + & - & - & + & + & - & - & + & + & + & + & -
+      + & - & - & + & - & + & + & - & -  & + & + & - \\
+      + & - & - & - & + & + & - & - & +  & + & - & + \\
+      + & - & - & + & + & - & - & + & -  & - & + & + 
     \end{pmatrix}\\
     M_{2} &=
     \begin{pmatrix}
@@ -1856,9 +1861,9 @@ von $1$ durch $+$ und von $-1$ durch $-$.
       - & + & - & + & - & + & - & + & - & + & - & +\\
       - & + & - & - & + & + & + & - & - & - & + & +\\
       - & + & - & + & + & - & - & - & + & + & + & -\\
-      + & - & - & + & - & + & + & - & - & + & + & -\\
-      + & - & - & - & + & + & - & - & + & - & + & +\\
-      + & - & - & + & + & - & - & + & + & + & + & -\\
+      + & - & - & + & - & + & + & - & -  & + & + & - \\
+      + & - & - & - & + & + & - & - & +  & + & - & + \\
+      + & - & - & + & + & - & - & + & -  & - & + & + \\
       - & - & + & + & - & + & - & - & + & - & + & +\\
       - & - & + & - & + & + & - & + & - & + & + & -\\
       - & - & + & + & + & - & + & - & - & + & - & +
