--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -1746,7 +1746,7 @@ eine neue \HM{}.
         \langle m_{k}^{(r)}, m_{l}^{(s)}\rangle= \langle c_{r}, c_{s}\rangle+
         \sum_{i=0}^{p-1} \langle c_{(k+ir)\mod{p}}, c_{(l+is)\mod{p}}\rangle
       \end{gather}
-      Die Summe enthält einen Index, für den gilt, $(k+ir)\mod{p}=
+      Die Summe enthält einen Index~$i$, für den gilt, $(k+ir)\mod{p}=
       (l+is)\mod{p}$, d.\,h. das Produkt dieser Zeilenvektoren ergibt
       $p$. Das Skalarprodukt der anderen Werte ergibt $-1$ und
       insgesamt ist damit das Ergebnis von \autoref{eq:ms-ms-mult}
@@ -1766,7 +1766,7 @@ von $1$ durch $+$ und von $-1$ durch $-$.
   konstruiert. Untenstehend sind die \HM~$H_{n}$, der Kern~$C$ dieser
   Matrix sowie die Matrix~$H_{2.}$ aufgeführt.
   \begin{align*}
-    H &=
+    H_{4} &=
     \begin{pmatrix}
       + & + & + & +\\
       + & - & + & -\\
@@ -2342,7 +2342,7 @@ Für einen Beweis dieser Aussage sei auf die Arbeit
 \end{bsp}
 
 Der Ansatz von \Williamson{} kann auch mit acht Matrizen verfolgt
-werden. Dazu sei $n\in\N$ und $A_{i}$ seien befreundete $n\times
+werden. Dazu sei $n\in\N$ und $A_{i}$ seien paarweise befreundete $n\times
 n$-Matrizen (siehe \autoref{def:befr-matrix}) für $i=1,\dots,8$ mit
 Einträgen aus $\{\pm1\}$. Die $A_{i}$ erfüllen die Bedingungen,
 $\sum_{i=1}^{8} A_{i}A_{i}^{T}= 8nI_{n}$ und $A_{i}A_{j}^{T}=
@@ -2378,7 +2378,7 @@ einige neue \HMen{}, die durch das Verfahren errechnet wurden.
 \begin{satz}[Konstruktionsverfahren nach \Goethals-\Seidel{}]
   Sei $n\in\N$ und $A$, $B$, $C$, $D$ vier zirkulante $n\times
   n$-Matrizen mit $AA^{T}+ BB^{T}+ CC^{T}+ DD^{T}= 4nI_{n}$. Außerdem
-  sei $R$ eine $n\times n$-Matrix, die aus Eins"=Einträgen auf der
+  sei $R$ die $n\times n$-Matrix, die aus Eins"=Einträgen auf der
   Nebendiagonalen, also $r_{ij}=1$ für $i+j=n+1$, und sonst $0$
   besteht.  Dann ist die folgende Matrix eine \HM{}.
   \begin{gather*}
@@ -2406,7 +2406,7 @@ einige neue \HMen{}, die durch das Verfahren errechnet wurden.
       RD^{T} & -RC    & RB      & A^{T}
     \end{pmatrix}
     \end{gather*}
-    zu berechnen. Dabei wurde berücksichtigt, dass $RR^{T}=RR$
+    zu berechnen. Dabei wurde berücksichtigt, dass $R^{T}=R$
     ist. Die Diagonaleinträge haben die Form $AA^{T}+ BRRB^{T}+
     CRRC^{T}+ DRRD^{T}$, wobei die Summanden gegebenenfalls in
     unterschiedlicher Reihenfolge vorkommen. Da $RR=I$ kann die
@@ -2450,7 +2450,8 @@ Computern die entsprechende Matrix. Dazu nutzten sie Folgen vom
 Turyn"=Typ, die auf eine Vorarbeit von \Turyn{} zurückgehen. Der
 Ansatz wird in diesem Kapitel vorgestellt. Zur Vorbereitung des
 Konstruktionsverfahrens werden zunächst einige Begriffe vorgestellt.
-Dazu werden Folgen $A=(a_{0},a_{1},\dots,a_{n-1})$ der Länge~$n$
+Dazu werden Folgen $A=(a_{0},a_{1},\dots,a_{n-1})$ der Länge~$n$ mit
+$a_{0}, a_{1},\dots,a_{n-1}\in\{\pm1\}$
 betrachtet.
 
 \begin{defini}\label{def:npaf}
@@ -2467,15 +2468,8 @@ betrachtet.
 \end{defini}
 
 Für zwei Folgen $A=(a_{0}, a_{1},\dots,a_{n-1})$ und
-$B=(b_{0},b_{1},\dots,b_{m-1})$ mit den Längen $n$ und $m$ ergibt sich
-$(N_{A}+N_{B})(k)$ für $k\geq1$ und $l=\max\{m,n\}$ durch
-  \begin{gather*}
-    (N_{A}+N_{B})(k)=
-    \begin{cases}
-      \sum_{i=0}^{l-1-k} a_{i}a_{i+k}+ b_{i}b_{i+k} & k=0,1,\dots,l-1\\
-      0 & k\geq l
-    \end{cases}
-  \end{gather*}
+$B=(b_{0},b_{1},\dots,b_{m-1})$ mit den Längen $n$ und $m$ ist
+$(N_{A}+N_{B})(k)\coloneqq N_{A}(k)+N_{B}(k)$.
 
 \begin{defini}\label{def:tts}
   Seien $X$, $Y$, $Z$ und $W$ vier Folgen mit Einträgen aus $\pm1$ sowie
@@ -2516,22 +2510,22 @@ Folgen $A$ und $B$.
     \begin{enumerate}[1.\,F{a}ll]
     \item Für den Fall $k\geq 2n-1$ sind nach der \autoref{def:tts}
       beide Seiten der Gleichung $0$.
-    \item Daher ist im folgenden der Fall $k<n$ zu betrachten. In der
+    \item Daher ist im folgenden der Fall $k<2n-1$ zu betrachten. In der
       Beweisführung wird von der Definition für die
       nicht"=periodische Autokorrelationsfunktion ausgegangen und diese
       in Untersummen zerlegt. Auf die Untersummen kann dann die
       Voraussetzung angewendet werden, so dass diese entsprechend
       umgeformt werden:
       \begin{align*}
-        (N_{A}+N_{B})(k) &= \sum_{i=0}^{2n-2-k} a_{i}a_{i+k}+
-        b_{i}b_{i+k}\\
-        &= \sum_{i=0}^{n-1-k} a_{i}a_{i+k} b_{i}b_{i+k}+
-        \sum_{i=n-k}^{n-1} a_{i}a_{i+k} b_{i}b_{i+k}+
-        \sum_{i=n}^{2n-2-k} a_{i}a_{i+k} b_{i}b_{i+k}\\
-        &= \sum_{i=0}^{n-1-k} z_{i}z_{i+k}+ z_{i}z_{i+k}
-        +\sum_{i=n-k}^{n-1} z_{i}w_{i+k-n}+ z_{i}(-w_{i+k-n})\\
+        (N_{A}&+N_{B})(k) = \sum_{i=0}^{2n-2-k} (a_{i}a_{i+k}+
+        b_{i}b_{i+k})\\
+        &= \sum_{i=0}^{n-1-k} (a_{i}a_{i+k}+ b_{i}b_{i+k})+
+        \sum_{i=n-k}^{n-1} (a_{i}a_{i+k}+ b_{i}b_{i+k})+
+        \sum_{i=n}^{2n-2-k} (a_{i}a_{i+k}+ b_{i}b_{i+k})\\
+        &= \sum_{i=0}^{n-1-k} (z_{i}z_{i+k}+ z_{i}z_{i+k})
+        +\sum_{i=n-k}^{n-1} \left(z_{i}w_{i+k-n}+ z_{i}(-w_{i+k-n})\right)\\
         &\qquad
-        +\sum_{i=n}^{2n-2-k} w_{i}w_{i+k}+ (-w_{i})(-w_{i+k})\\
+        +\sum_{i=n}^{2n-2-k} \left(w_{i}w_{i+k}+ (-w_{i})(-w_{i+k})\right)\\
         &= 2N_{Z}(k)+0+2N_{W}(k)= (2N_{Z}+2N_{W})(k)
       \end{align*}
     \end{enumerate}
@@ -2547,13 +2541,15 @@ Folge aus der untenstehenden Definition immer als $T$"=Folge
 bezeichnet.
 
 \begin{defini}
-  Seien $X$, $Y$, $Z$ und $W$ Folgen der Länge~$n$ mit Einträgen aus
-  $\{0,\pm1\}$ und an der $i$-ten Position in den Folgen ist genau ein
-  Eintrag von $0$ verschieden. Dann wird
+  Seien $X$, $Y$, $Z$ und $W$ vier Folgen der Länge~$n$ mit Einträgen
+  aus $\{0,\pm1\}$ und $X=(x_{0},\dots,x_{n-1})$, $Y=(y_{0},\dots,y_{n-1})$,
+  $Z=(z_{0},\dots,z_{n-1})$, $W=(w_{0},\dots,w_{n-1})$. Dabei ist genau ein
+  $x_{i}$, $y_{i}$, $z_{i}$, $w_{i}$ für $0\leq i\leq n-1$ von Null
+  verschieden. Falls gilt,
   \begin{gather*}
     (N_{X}+N_{Y}+N_{Z}+N_{W})(k)=0
   \end{gather*}
-  für $k\geq1$ als \highl{$T$"=Folge} bezeichnet.
+  für $k\geq1$ werden $X$, $Y$, $Z$, $W$ als \highl{$T$"=Folgen} bezeichnet.
 \end{defini}
 
 \begin{satz}\label{satz:basis-tfolg}
@@ -2566,12 +2562,13 @@ bezeichnet.
   $T$"=Folgen mit den Längen $2n+p$. Dabei bezeichnet $0_{m}$ eine
   Folge der Länge $m$ mit Null"=Einträgen.
   \begin{proof}
-    Aufgrund der Konstruktion ist klar, dass die vier Folgen die Länge
+    Aufgrund der Konstruktion ist klar, dass die vier Folgen die
+    angegebene Länge
     haben. Denn jede besteht aus einer Teilfolge der Länge $n+p$ und
-    einer der Länge $n$.
+    einer der Länge $n$. Weiterhin sind $X$, $Y$, $Z$ und $W$ Folgen
+    mit Einträgen aus $\{0,\pm1\}$.
 
-    $T$-Folgen besitzen an der $i$-ten Stelle einen von $0$
-    verschiedenen Eintrag. Die Folgen $X$, $Y$ bzw. $Z$, $W$ haben an
+    Die Folgen $X$, $Y$ bzw. $Z$, $W$ haben an
     den letzten $n$~Stellen bzw. an den ersten $n+p$~Stellen
     Null"=Einträge. Somit sind entweder $X$ und $Y$ oder $Z$ und $W$
     zusammen zu betrachten. Die Einträge $x_{i}\in X$ und $y_{i}\in Y$
@@ -2586,7 +2583,7 @@ bezeichnet.
     Nun ist die Eigenschaft $(N_{X}+N_{Y}+N_{Z}+N_{W})(k)=0$ zu
     prüfen. Wie im Beweis zu \autoref{satz:tts-basis} sind zwei Fälle
     zu unterscheiden. Für den Fall, dass $k\geq 2n+p$ ist die
-    Autokorrelationsfunktion nach der \autoref{def:npaf} $0$. Also
+    Autokorrelationsfunktion $0$ nach der \autoref{def:npaf}. Also
     wird im folgenden der Fall $k<2n+p$ betrachtet.
     \begin{align}\label{eq:1}
       (N_{X}+N_{Y}+N_{Z}+N_{W})(k) &= \sum_{i=0}^{2n+p-1-k}
@@ -2600,7 +2597,7 @@ bezeichnet.
     \end{align}
     Aufgrund der Konstruktion der Folgen können einige Terme
     weggelassen werden. In der \autoref{eq:2} werden die letzten
-    beiden Summanden immer mit $0$ multipliziert. In der Gleichung
+    beiden Summanden immer mit $0$ multipliziert. In der
     \autoref{eq:3} wird jeder Summand mit $0$ multipliziert. Daher
     ist das Ergebnis $0$. Bei der \autoref{eq:4} entfallen die ersten
     beiden Summanden, da einer der beiden Summanden immer $0$
@@ -2642,7 +2639,7 @@ die Basis für zirkulante Matrizen. Aus diesen wird schließlich eine
     -T_{1}+T_{2}+T_{3}-T_{4}\\
     A_{3} &= -T_{1}-T_{2}+T_{3}+T_{4} & A_{4} &= -T_{1}+T_{2}-T_{3}+T_{4}\nonumber
   \end{align}
-  Weiterhin sei $R$ eine Matrix mit $1$"=Einträgen auf der
+  Weiterhin sei $R$ die $n\times n$"=Matrix mit $1$"=Einträgen auf der
   Nebendiagonale und sonst $0$"=Einträgen. Dann ist die folgende
   Matrix eine \HM{}
   \begin{gather}\label{eq:5}
@@ -2685,7 +2682,7 @@ folgende Produkt berechnet werden:
     RA_{4}^{T} & -RA_{3} & RA_{2} & A_{1}^{T}
   \end{pmatrix}
 \end{gather*}
-Die Produkte auf der Hauptdiagonalen haben jeweils die Form
+Die Produkte auf der Hauptdiagonalen haben jeweils die Form\todo{Umformulieren}
 $A_{1}A_{1}^{T}+ A_{2}A_{2}^{T}+ A_{3}A_{3}^{T}+
 A_{4}A_{4}^{T}$. Diese können nach der Vorschrift aus der
 \autoref{eq:tts-hm} und Umformen verbleibt $T_{1}T_{1}^{T}+
@@ -2749,7 +2746,7 @@ berechenbar sind.
   berechnen:
   \begin{align*}
     k=1 &\colon (1-1+2-2)+(1-1-2-2)+(1+1+2)= 0-4+4=0\\
-    k=2 &\colon (1+1-2+2)+(+1-1-2)=0+0=0\\
+    k=2 &\colon (1+1-2+2)+(+1-1-2)=2-2=0\\
     k=3 &\colon (1+1-2)=0
   \end{align*}
   Weiterhin haben $X$, $Y$ und $Z$ die Länge $4$ und $W$ hat die Länge
