--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -798,13 +798,14 @@ Matrixmultiplikation. Eine Untergruppe davon sind die
 \highl{Permutationsmatrizen}. Diese sind quadratische Matrizen, die in
 jeder Zeile und Spalte genau einen Eintrag~$+1$ haben.
 
-Im Rahmen dieser Arbeit werden nur monomiale Matrizen\todo{Eventuell
-  als verallgemeinerte Permmat benennen} mit Einträgen
-aus $0$ und $\pm 1$ betrachtet. Der Begriff der Äquivalenz
-wird nun unter Ausnutzung dieser Tatsache formuliert.
+Monomiale Matrizen, die nur Einträge aus $\{0,\pm1\}$ haben, werden
+als \highl{verallgemeinerte Permutationsmatrizen} bezeichnet. Der
+Begriff der Äquivalenz wird nun unter Ausnutzung dieser Tatsache
+formuliert.
 \begin{defini}
   Seien $H_{1}$ und $H_{2}$ zwei $n\times n$-\HMen{}. Die Matrizen
-  $H_{1}$ und $H_{2}$ heißen \highl{äquivalent}, wenn monomiale $n\times n$-Matrizen $P$ und $Q$ mit
+  $H_{1}$ und $H_{2}$ heißen \highl{äquivalent}, wenn verallgemeinerte
+  $n\times n$-Permutationsmatrizen $P$ und $Q$ mit
   \begin{gather*}
     H_{1} = PH_{2}Q^{T}
   \end{gather*}
