Update der Literatur

--- a/haberland-zahlen/skript.ltx
+++ b/haberland-zahlen/skript.ltx
@@ -288,6 +288,13 @@
  \bibitem{bore} \foreignlanguage{russian}{Borevich, Shafarevich} (Borevich,
   Shafarevich): \foreignlanguage{russian}{Teoriya chisel} (Number theory),
   \foreignlanguage{russian}{Izd. Nauka} (Hayka), Moskau 1985
+\bibitem{cassels} Cassels, Fröhlich: Algebraic number theory, Academic press 1990
+\bibitem{taylor} Fröhlich, Taylor: Algebraic number theory, Cambridge University Press 1993
+\bibitem{lang} Serge Lang: Algebraic number theory, Springer 1994
+\bibitem{marcus} D.\,Marcus: Number fields, Springer 1995
+\bibitem{neukirch} Neukirch: Algebraic number theory, Springer 2002
+\bibitem{rama} Ramakrishnan, Valenza: Fourier Analysis on number fields, Springer 1993
+\bibitem{swin} Swinnerton-Dyer: A brief guide to algebraic number theory, Cambridge University Press 2001
  \bibitem{zagier} Don Zagier: Zetafunktion und quadratische Zahlenkörper,
   Springer 1981
  \bibitem{edwards} Edwards: Fermat's last theorem, Springer 1977
